<resources>
    <string name="app_name">VlearnIT</string>
    <string name="home">Home</string>
    <string name="friends">Friends</string>
    <string name="find_friends">Find Friends</string>
    <string name="message">Message</string>
    <string name="settings">Settings</string>
    <string name="logout">LogOut</string>
    <string name="add_new_post">Add New Post</string>
    <string name="profile">Profile</string>
    <string name="username">Username</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="app_icon">App Icon</string>
    <string name="email">Email..</string>
    <string name="password">Password..</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="create_account">Create Account</string>
    <string name="login">login</string>
    <string name="don_t_have_an_account">Don\'t have an Account?</string>
    <string name="or_login_with">or Login with</string>
    <string name="update_post">Update Post</string>
    <string name="post_something_new_here">Post something new here...</string>
    <string name="post_description">Post Description....</string>
    <string name="time">Time</string>
    <string name="user_s_full_name">User\'s Full Name</string>
    <string name="has_updated_a_post_on">has updated a post on</string>
    <string name="date">Date</string>
    <string name="at"> at </string>
    <string name="delete_post">Delete Post</string>
    <string name="profile_status">Profile Status...</string>
    <string name="full_name">Full Name</string>
    <string name="country">Country</string>
    <string name="date_of_birth_as_dd_mmmm_yy">Date of Birth (as dd-MMMM-YY)</string>
    <string name="male_or_female">Male or Female</string>
    <string name="programming_level">Programming Level</string>
    <string name="update_user_settings">Update User Settings</string>
    <string name="profile_name">Profile Name</string>
    <string name="comments">Comments:</string>
    <string name="add_a_comment_here">Add a comment here...</string>
    <string name="plus_sign">+</string>
    <string name="comment_will_be_displayed_here">Comment will be displayed here...</string>
    <string name="reset_password">Reset Password</string>
    <string name="recover_text">Click on the link to recover your account on your registered email. \n Enter your registered email here..</string>
    <string name="registered_email">Registered Email</string>
    <string name="recover_your_account">Recover your account</string>
    <string name="friend_requests">Friend Requests</string>
    <string name="no_more_requests_to_show">No more requests to show</string>
</resources>
