<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ResetPasswordActivity"
    android:background="@drawable/login">

    <include
        android:id="@+id/resetPasswordToolbar"
        layout="@layout/app_bar_layout"/>

    <TextView
        android:id="@+id/resetPasswordTextView"
        android:layout_below="@id/resetPasswordToolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/reset_password"
        android:textAlignment="center"
        android:textSize="22sp"
        android:layout_margin="5dp"
        android:textColor="@android:color/black"/>

    <TextView
        android:id="@+id/resetInfoTextView"
        android:layout_below="@id/resetPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/recover_text"
        android:textColor="@android:color/black"
        android:layout_marginTop="10dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:textAlignment="center"
        android:textSize="16sp"
        />

    <EditText
        android:id="@+id/recoverEmailEditText"
        android:layout_below="@+id/resetInfoTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/registered_email"
        android:layout_margin="10dp"
        android:padding="15dp"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"/>

    <Button
        android:id="@+id/recoverAccountBtn"
        android:layout_below="@+id/recoverEmailEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:layout_marginTop="20dp"
        android:text="@string/recover_your_account"
        android:textColor="@android:color/white"
        android:background="@drawable/button"
        android:layout_centerHorizontal="true"
        />



</RelativeLayout>