<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity"
    android:background="@color/colorProfile">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical" >

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/pprofileImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"
                android:layout_centerHorizontal="true"/>

            <TextView
                android:id="@+id/pprofileFullnameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileImageView"
                android:layout_marginTop="10dp"
                android:text="@string/profile_name"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/pprofileUsernameTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileFullnameTextView"
                android:layout_marginTop="10dp"
                android:text="@string/username"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/pprofileStatusTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileUsernameTextView"
                android:layout_marginTop="10dp"
                android:text="@string/profile_status"
                android:textAlignment="center"
                android:textColor="@android:color/darker_gray"
                android:textSize="19sp" />


            <TextView
                android:id="@+id/pprofileCountryTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileStatusTextView"
                android:layout_marginTop="50dp"
                android:text="@string/country"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"/>


            <TextView
                android:id="@+id/pprofileDobTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileCountryTextView"
                android:layout_marginTop="10dp"
                android:text="@string/date_of_birth_as_dd_mmmm_yy"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"/>

            <TextView
                android:id="@+id/pprofileLevelTextView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/pprofileDobTextView"
                android:layout_marginTop="10dp"
                android:text="@string/programming_level"
                android:textAlignment="center"
                android:textColor="@color/cardview_light_background"
                android:textSize="18sp"/>

        </RelativeLayout>
    </ScrollView>

</RelativeLayout>