<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsActivity"
    android:background="@drawable/register">

    <include
        android:id="@+id/navSettingsToolbar"
        layout="@layout/app_bar_layout"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/navSettingsToolbar">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/settingsProfileImageView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="10dp"
                android:src="@drawable/profile"/>

            <EditText
                android:id="@+id/settingsStatusEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsProfileImageView"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginStart="30dp"
                android:layout_marginEnd="30dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/profile_status"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsUsernameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsStatusEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/username"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsFullnameEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsUsernameEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/full_name"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsCountryEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsFullnameEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/country"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsDobEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsCountryEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/date_of_birth_as_dd_mmmm_yy"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsGenderEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsDobEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/male_or_female"
                android:inputType="text"
                />

            <EditText
                android:id="@+id/settingsLevelEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@id/settingsGenderEditText"
                android:layout_marginTop="10dp"
                android:layout_marginStart="10dp"
                android:layout_marginEnd="10dp"
                android:background="@drawable/inputs"
                android:padding="20dp"
                android:hint="@string/programming_level"
                android:inputType="text"
                />

            <Button
                android:id="@+id/settingsUpdateBtn"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_margin="20dp"
                android:layout_below="@id/settingsLevelEditText"
                android:text="@string/update_user_settings"
                android:textSize="20sp"
                android:textColor="@color/cardview_light_background"
                android:background="@drawable/button"/>


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>