<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    android:background="@drawable/login">

    <ImageView
        android:id="@+id/iconLoginImageView"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="25dp"
        android:contentDescription="@string/app_icon"
        app:srcCompat="@drawable/logo" />

    <EditText
        android:id="@+id/emailLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/iconLoginImageView"
        android:layout_marginTop="20dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:ems="10"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:background="@drawable/inputs"
        android:padding="5dp"
        android:drawableStart="@drawable/email"/>

    <EditText
        android:id="@+id/passLoginEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/emailLoginEditText"
        android:layout_marginTop="5dp"
        android:layout_marginStart="5dp"
        android:layout_marginEnd="5dp"
        android:background="@drawable/inputs"
        android:drawableStart="@drawable/password"
        android:ems="10"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:padding="5dp" />

    <Button
        android:id="@+id/loginBtn"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/passLoginEditText"
        android:layout_marginTop="10dp"
        android:background="@drawable/button"
        android:padding="15dp"
        android:text="@string/login"
        android:textColor="@android:color/background_light"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/noAccountTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/loginBtn"
        android:layout_marginTop="5dp"
        android:text="@string/don_t_have_an_account"
        android:textAlignment="center"
        android:textColor="@android:color/holo_red_dark"
        android:textSize="18sp" />

    <TextView
        android:id="@+id/loginAltTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/noAccountTextView"
        android:text="@string/or_login_with"
        android:textAlignment="center" />

    <LinearLayout
        android:id="@+id/socialMediaLinearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/loginAltTextView"
        android:layout_marginTop="10dp">

        <ImageView
            android:id="@+id/facebookSigninBtn"
            android:layout_width="100dp"
            android:layout_height="80dp"
            android:layout_marginTop="8dp"
            android:layout_weight=".33"
            android:src="@drawable/facebook" />

        <ImageView
            android:id="@+id/twitterSigninBtn"
            android:layout_width="125dp"
            android:layout_height="105dp"
            android:layout_weight=".33"
            android:src="@drawable/twitter" />

        <ImageView
            android:id="@+id/googleSigninBtn"
            android:layout_width="90dp"
            android:layout_height="75dp"
            android:layout_marginTop="15dp"
            android:layout_weight=".33"
            android:src="@drawable/google" />

    </LinearLayout>

    <TextView
        android:id="@+id/forgotPasswordTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialMediaLinearLayout"
        android:layout_margin="10dp"
        android:text="Forgot password?"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="16sp"/>
    
</RelativeLayout>